gitops/apps/sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: sample-app
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: REPLACE_WITH_RESOURCE_PREFIX-app
    alb.ingress.kubernetes.io/tags: "Project=REPLACE_WITH_PROJECT,Environment=REPLACE_WITH_ENVIRONMENT,Owner=REPLACE_WITH_OWNER,CostCenter=REPLACE_WITH_COST_CENTER,ManagedBy=aws-load-balancer-controller"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: REPLACE_WITH_ACM_CERTIFICATE_ARN
    alb.ingress.kubernetes.io/wafv2-acl-arn: REPLACE_WITH_WAF_WEB_ACL_ARN
spec:
  ingressClassName: alb
  rules:
    - host: REPLACE_WITH_APP_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app
                port:
                  name: http
